<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018.
  ~ Developed by Turak Nurahmat
  ~ Under the guide of  the University of Hertfordshire, Master of Computer Science final project team.
  ~ SID:15066679
  ~ License: Apache 2.0
  ~ All rights reserved!
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <!--<include layout="@layout/tab01"/>-->
    <!--<include layout="@layout/tab04"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#0E6DB0"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0E6DB0"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llChat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IV_Chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/chat_icon"
                android:src="@drawable/tab_chat" />

            <TextView
                android:id="@+id/tv_Chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                android:textColor="@drawable/tab_textview" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Contacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IV_Contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/friends_icon"
                android:src="@drawable/tab_contacts" />

            <TextView
                android:id="@+id/TV_Contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textColor="@drawable/tab_textview" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Memory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IV_Memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/memory_icon"
                android:src="@drawable/tab_memory" />

            <TextView
                android:id="@+id/tv_Memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory"
                android:textColor="@drawable/tab_textview" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/settings_icon"
                android:src="@drawable/tab_setting" />

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@drawable/tab_textview" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>